Update 'tlrfrwpo9-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:4217c366791c73b13c76b0c9bccbe0ab3feb1da8@sha256:a1648b708f7b2f28cd772d358901757abbbedc78bd4bc3c2b349069a1318dbd6

--- a/components/tlrfrwpo9-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/tlrfrwpo9-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tlrfrwpo9-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:4217c366791c73b13c76b0c9bccbe0ab3feb1da8@sha256:a1648b708f7b2f28cd772d358901757abbbedc78bd4bc3c2b349069a1318dbd6
+          name: container-image
